Fix formatting and improve readability of Javadoc comments in FollowService